src/objects/Restricted_Offer_Usage__c.object
<CustomObject>
    <description>Stores information about Restricted Offers used by the subscriber</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Restricted_Offer_Usage</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ignore_Lock_in_Period__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore Lock-in Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lock_in_Expiry_Date__c</fullName>
        <formula>DATE(
	YEAR(Subscription__r.Zuora__SubscriptionEndDate__c) + FLOOR( ( MONTH (Subscription__r.Zuora__SubscriptionEndDate__c) + VALUE(Product__r.RestrictedOfferLockinPeriod__c) - 1 ) / 12 ),
	MOD( MONTH (Subscription__r.Zuora__SubscriptionEndDate__c) + VALUE(Product__r.RestrictedOfferLockinPeriod__c) - 1, 12 ) + 1,
	IF( DAY(Subscription__r.Zuora__SubscriptionEndDate__c) &gt; CASE( MOD( MONTH(Subscription__r.Zuora__SubscriptionEndDate__c) + VALUE(Product__r.RestrictedOfferLockinPeriod__c) - 1, 12 ) + 1,
							2, 28,
							4, 30,
							6, 30,
							9, 30,
							11, 30,
							31 ),
		CASE( MOD( MONTH(Subscription__r.Zuora__SubscriptionEndDate__c) + VALUE(Product__r.RestrictedOfferLockinPeriod__c) - 1, 12 ) + 1,
							2, 28,
							4, 30,
							6, 30,
							9, 30,
							11, 30,
							31 ), 
		DAY(Subscription__r.Zuora__SubscriptionEndDate__c)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lock-in Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Friendly_Name__c</fullName>
        <formula>Product__r.ProductFriendlyName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Friendly Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>zqu__ZProduct__c</referenceTo>
        <relationshipName>Restricted_Offer_Usage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_End_Date__c</fullName>
        <formula>Subscription__r.Zuora__SubscriptionEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipName>Restricted_Offer_Usage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_Of_Offer__c</fullName>
        <label>Type Of Offer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_Product_Id__c</fullName>
        <label>Zuora Product Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_Subscription_Id__c</fullName>
        <label>Zuora Subscription Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Restricted Offer Usage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Product__c</columns>
        <columns>Product_Friendly_Name__c</columns>
        <columns>Subscription__c</columns>
        <columns>Lock_in_Expiry_Date__c</columns>
        <columns>Type_Of_Offer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Restricted Offer Usage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Restricted Offer Usage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>